--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Raywater Cottage Resort.",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "watch": "sass src/scss:public/css --watch",
+    "server" : "live-server"
+    },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ashleylall/raywater-cottage-resort.git"
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/ashleylall/raywater-cottage-resort#readme",
   "devDependencies": {
+    "parcel-bundler": "^1.12.5",
     "sass": "^1.32.8"
   }
 }
